--- a/kmeans.css
+++ b/kmeans.css
@@ -1,8 +1,59 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+    background-color: rgb(28, 77, 118); 
+}
+h1{
+    padding: 10px;
+    width: fit-content;
+    border: 1px solid black;
+    box-shadow: 10px 10px  black;
+    background-color: whitesmoke;
+}
+.inputForm{
+    width: fit-content;
+    padding: 10px;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+input{
+    width: 350px;
+    margin-bottom: 10px;
+}
+label{
+    color: whitesmoke;
+}
+button{
+    width: 40px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    border: 1px solid black;
+    background-color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 10px;
+    transition: all 0.25s;
+}
+button:hover{
+    box-shadow: 3px 3px black;
+    transform: scale(1.1);
+}
+.bodyContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 .kmeans-chart {
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
     font-size: 9px;
-    fill: #ccc;
+    background-color: whitesmoke;
+
+    width: fit-content;
+    border: 1px solid black;
+    box-shadow: 10px 10px black;
+
 }
 
 .kmeans-chart .centroid {
@@ -20,4 +71,15 @@
     stroke-width: 1px;
     stroke: #ccc;
     shape-rendering: crispEdges;
+}
+
+#output{
+    height: 50px;
+    width: 500px;
+    border: 1px solid black;
+
+
+    resize: none;
+    outline: none;
+    box-shadow: 10px 10px black;
 }
