--- a/kmeans.css
+++ b/kmeans.css
@@ -4,14 +4,17 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-
 }
+
+/* Container for Graph Columns */
 .bodyContainer{
     padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
+
+/* Title */
 h1{
     align-self: center;
     padding: 10px;
@@ -20,6 +23,8 @@ h1{
     box-shadow: 10px 10px  black;
     background-color: whitesmoke;
 }
+
+/* User Inputs */
 .inputForm{
     align-self: center;
     width: fit-content;
@@ -51,35 +56,8 @@ button:hover{
     box-shadow: 3px 3px black;
     transform: scale(1.1);
 }
-.kmeans-chart {
-    font-family: "Open Sans", Arial, Helvetica, sans-serif;
-    font-size: 9px;
-    background-color: whitesmoke;
-
-    width: fit-content;
-    border: 1px solid black;
-    box-shadow: 10px 10px black;
-
-}
-
-.kmeans-chart .centroid {
-    stroke: #000;
-    stroke-width: 2px;
-}
-
-.kmeans-chart text.label {
-    font-size: 12px;
-    fill: #333;
-}
-
-.kmeans-chart .axis line, .axis path {
-    fill: none;
-    stroke-width: 1px;
-    stroke: #ccc;
-    shape-rendering: crispEdges;
-}
-
-#output{
+/* Hover/Click Output Box */
+.output textarea{
     height: 50px;
     width: 420px;
     border: 1px solid black;
@@ -89,3 +67,31 @@ button:hover{
     outline: none;
     box-shadow: 10px 10px black;
 }
+
+
+
+/* Given KMEANS Styling */
+.kmeans-chart {
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    font-size: 9px;
+    background-color: whitesmoke;
+
+    width: fit-content;
+    border: 1px solid black;
+    box-shadow: 10px 10px black;
+}
+.kmeans-chart .centroid {
+    stroke: #000;
+    stroke-width: 2px;
+}
+.kmeans-chart text.label {
+    font-size: 12px;
+    fill: #333;
+}
+.kmeans-chart .axis line, .axis path {
+    fill: none;
+    stroke-width: 1px;
+    stroke: #ccc;
+    shape-rendering: crispEdges;
+}
+
