--- a/movieGraph/kmeans.css
+++ b/movieGraph/kmeans.css
@@ -1,3 +1,90 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+    background-color: rgb(28, 77, 118); 
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-around;
+}
+
+/* Container for Graph Columns */
+.bodyContainer{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+/* Title */
+h1{
+    align-self: center;
+    padding: 10px;
+    width: fit-content;
+    border: 1px solid black;
+    box-shadow: 10px 10px  black;
+    background-color: whitesmoke;
+}
+
+/* User Inputs */
+.inputForm{
+    align-self: center;
+    width: fit-content;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+input{
+    width: 300px;
+    margin-bottom: 10px;
+}
+label{
+    color: whitesmoke;
+}
+button{
+    width: 40px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border: 1px solid black;
+    background-color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 10px;
+    transition: all 0.25s;
+}
+button:hover{
+    box-shadow: 3px 3px black;
+    transform: scale(1.1);
+}
+
+.graphandoutput{
+    padding: 0px 50px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+}
+/* Hover/Click Output Box */
+.output textarea{
+    height: 98.7%;
+    min-height: 100px;
+    width: 300px;
+    border: 1px solid black;
+
+
+    resize: none;
+    outline: none;
+    box-shadow: 10px 10px black;
+}
+
+li{
+    color: white;
+}
+a{
+    color: white;
+}
+
 /* Given KMEANS Styling */
 .kmeans-chart {
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
