--- a/main.css
+++ b/main.css
@@ -49,5 +49,5 @@ h1{
     background-image: url("./images/fdSS.png");
 }
 .flexItem .kmIMG{
-    background-image: url("https://media.npr.org/assets/img/2019/04/14/gettyimages-1142672802_custom-2465725aad1c937145f942bb3396b1ea4d3dfe88.jpg");
+    background-image: url("./images/kmSS.png");
 }
